@@ -7,6 +7,8 @@
 ###########################################################
 - Added function imputeSD to impute standard deviations for changes from
   baseline following the Cochrane handbook, Section 16.1.3.2
+- Modified function optCutoff. Should give better results now.
+- Minor change in function perfMeasures to avoid unnecessary error message.
 
 
 ###########################################################
